# soep-preparation

./: .codespell-wordlist.txt  .codespell-wordlist.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .yamllint.yaml  AGENTS.md  CHANGES.md  CITATION  CLAUDE.md  LICENSE  README.md  SOEP_MIGRATION_NOTES.md  environment.yml  inputs.yaml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs/: _generate_variables.py  concepts.md  creating_a_dataset.md  extending.md  getting_started.md  index.md  myst.yml  naming_conventions.md  scope.md  using_with_gettsim.md  wealth_imputation.md
docs/superpowers/plans/: 2026-06-19-wealth-imputation-harness-foundation.md
docs/superpowers/specs/: 2026-06-19-soep-wealth-imputation-harness-design.md  2026-06-19-soep-wealth-imputation-harness-review-bundle.md  2026-06-19-wealth-imputation-foundation-code-review-bundle.md
inst/: WORDLIST
paper/: data_management_von_gaudecker.tex  data_management_von_gaudecker_pres.tex  task_paper.py
sandbox/: __init__.py  task_example_final_dataset.py
src/data_management_von_gaudecker/: __init__.py  config.py  utilities.py
src/data_management_von_gaudecker/analysis/: task_analysis.py
src/data_management_von_gaudecker/data_helper/: data_cleaning_helper.py  data_cleaning_parametrization.py  data_loader.py
src/data_management_von_gaudecker/data_management/: __init__.py  data_specific_cleaner.py  task_clean_datasets.py  task_data_management.py
src/data_management_von_gaudecker/data_specific_cleaner/: clean_biobirth.py
src/data_management_von_gaudecker/final/: __init__.py  task_final.py
src/data_management_von_gaudecker/sandbox/: biobirth_inspection.ipynb
src/soep_cleaning/: __init__.py  config.py  education_mapping.py  month_mapping.py  utilities.py
src/soep_cleaning/create_variables/: h_specific_manipulator.py  helper.py  p_specific_manipulator.py  pequiv.py  pgen.py  pkal.py  pl.py  task.py
src/soep_cleaning/data_helper/: data_cleaning_helper.py
src/soep_cleaning/data_management/: data_specific_cleaner.py  task_clean_datasets.py
src/soep_cleaning/dataset_mapping/: task.py
src/soep_cleaning/dataset_merging/: merge_datasets.py  task.py  task_merge_datasets.py
src/soep_cleaning/dataset_pickling/: helper.py  task.py
src/soep_cleaning/initial_cleaning/: bio_specific_cleaner.py  biobirth.py  bioedu.py  biol.py  design.py  h_specific_cleaner.py  hgen.py  hl.py  hpathl.py  hwealth.py  kidlong.py  other_specific_cleaner.py  p_specific_cleaner.py  pbrutto.py  pequiv.py  pgen.py  pkal.py  pl.py  ppathl.py  task.py
src/soep_cleaning/initial_preprocessing/: bio_specific_cleaner.py  data_cleaning_helper.py  data_specific_cleaner.py  h_specific_cleaner.py  helper.py  other_specific_cleaner.py  p_specific_cleaner.py  task.py  task_.py
src/soep_cleaning/sandbox/: biobirth_inspection.ipynb
src/soep_preparation/: __init__.py  config.py  final_dataset.py  task_example.py  utilities.py
src/soep_preparation/clean_existing_variables/: __init__.py  biobirth.py  bioedu.py  biol.py  bioparen.py  design.py  hgen.py  hl.py  hpathl.py  hwealth.py  kidlong.py  month_mapping.py  pbrutto.py  pequiv.py  pgen.py  pkal.py  pl.py  ppathl.py  task.py
src/soep_preparation/clean_modules/: biobirth.py  bioedu.py  biol.py  bioparen.py  cirdef.py  design.py  health.py  hgen.py  hl.py  hpathl.py  hwealth.py  kidlong.py  pbrutto.py  pequiv.py  pgen.py  pkal.py  pl.py  ppathl.py  pwealth.py  task.py
src/soep_preparation/clean_variables/: __init__.py  biobirth.py  bioedu.py  biol.py  bioparen.py  design.py  hgen.py  hl.py  hpathl.py  hwealth.py  kidlong.py  pbrutto.py  pequiv.py  pgen.py  pkal.py  pl.py  ppathl.py  task.py
src/soep_preparation/combine_modules/: __init__.py  household.py  hpathl_design.py  pequiv_hl.py  pequiv_pkal.py  pequiv_pl.py  personal.py  pl_pbrutto.py  pl_pkal.py  ppathl_bioedu.py  ppathl_pgen.py  task.py
src/soep_preparation/combine_variables/: household.py  personal.py  task.py
src/soep_preparation/convert_stata_to_pandas/: __init__.py  (+1 more)
tests/: test_dummy_comparisons.py  test_int_categorical_allow_list.py  test_naming_conventions.py  test_no_int_categorical.py  test_pgen_dummy_comparisons.py  test_reference_period.py
tests/analysis/: test_model.py  test_predict.py
tests/clean_existing_variables/: __init__.py  test_cleaning.py  test_create_dummy.py  test_numerical.py  test_object_to_categorical.py  test_object_to_numerical.py  test_removing_missing_data_values.py  test_replace_missing_codes_with_na.py  test_replace_not_applicable.py  test_translate_categories.py
tests/clean_modules/: test_hl.py  test_pgen.py  test_pl.py
tests/combine_modules/: test_pequiv_pkal.py  test_pequiv_pkal_unemployment.py  test_ppathl_bioedu.py  test_ppathl_pgen.py
tests/convert_stata_to_pandas/: __init__.py  test_converting.py  test_reading.py
tests/data_management/: test_clean_data.py
tests/dataset_merging/: test_panel_dataset_creation.py
tests/dataset_pickling/: test_loading.py
tests/dataset_specific/: __init__.py  test_dataset_selection.py
tests/gettsim_inputs/: test_build.py  test_input_scope.py  test_mapping.py
tests/initial_cleaning/: test_cleaning.py  test_helper.py
tests/initial_preprocessing/: test_helper.py
tests/merge_data/: __init__.py  test_final_dataset.py  test_helper.py  test_sandbox_tasks.py
tests/metadata/: test_mapping_changed.py  test_reference_assignment.py  test_stale_module_entries.py
tests/survey_year_audit/: test_report.py
tests/wealth_imputation/: test_aggregate.py  test_amount_model.py  test_amounts.py  test_backtest.py  test_components.py  test_deflation.py  test_donors.py  test_features.py  test_impute.py  test_intervals.py  test_market_indices.py  test_ownership_model.py  test_probe.py  test_registry.py  test_registry_content.py  test_residual_backtest.py  test_residual_model.py  test_shares.py  test_simulate.py  test_training.py  test_transforms.py  test_transport_backtest.py  test_value_generator.py  test_wealth_dynamics.py
(+106 files in other folders)
