[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "soep-preparation"
description = "Prepare the SOEP data for analysis."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = []
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pandas>=3",
  "pyarrow>=21",
  "pytask>=0.6",
  "pytask-parallel>=0.5.1",
]
[[project.authors]]
name = "Felix Schmitz"
email = "s87fschm@uni-bonn.de"
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[project.urls]
Github = "https://github.com/OpenSourceEconomics/soep-preparation"
Repository = "https://github.com/OpenSourceEconomics/soep-preparation"
Tracker = "https://github.com/OpenSourceEconomics/soep-preparation/issues"

[tool.hatch]
version.source = "vcs"
metadata.allow-direct-references = true
build.hooks.vcs.version-file = "src/soep_preparation/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]

[tool.pixi.dependencies]
deepdiff = "*"
jupyter-book = ">=2"
jupyterlab = "*"
mystmd = "*"
prek = "*"
pygments = ">=2.19.2"
pygraphviz = "*"
[tool.pixi.environments]
py314 = [ "py314", "tests" ]
[tool.pixi.feature.py314]
dependencies.python = "~=3.14.0"
[tool.pixi.feature.tests.pypi-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.tasks]
tests = "pytest"
tests-with-cov = "pytest tests --cov-report=xml --cov=./"
[tool.pixi.pypi-dependencies]
soep_preparation = { path = ".", editable = true }
kaleido = ">=1.0.0"
pdbp = ">=1.8.1"
[tool.pixi.tasks]
generate-variables = { cmd = "python _generate_variables.py", cwd = "docs" }
build-docs = { cmd = "python _generate_variables.py && jupyter book build --html --execute", cwd = "docs" }
view-docs = { cmd = "python _generate_variables.py && jupyter book start", cwd = "docs" }
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812", # Avoid conflict with ruff-format
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "FBT001", # Boolean-typed positional argument in function definition
  "FIX002", # Line contains TODO (rely on TD area for spotting)
  "ISC001", # Avoid conflict with ruff-format
  "PD015",  # pd.merge fine because of inherent symmetry
  "RUF001", # Ambiguous unicode in strings (raw SOEP labels carry them verbatim)
  "RUF002", # Ambiguous unicode in docstrings
  "RUF003", # Ambiguous unicode in comments
  "S101",   # Use of `assert` detected
  "TC001",  # Move application import into a type-checking block
  "TC002",  # Move third-party import into a type-checking block
  "TC003",  # Move standard library import into a type-checking block
  "TRY003", # Avoid specifying long messages outside the exception class
]
per-file-ignores."**/task.py" = [
  "ANN", # Type annotations (pytask signatures use Annotated[Path, Product])
]
per-file-ignores."docs/*" = [
  "INP001", # Implicit namespace packages
]
per-file-ignores."sandbox/*" = [
  "INP001", # Implicit namespace packages
]
per-file-ignores."src/soep_preparation/config.py" = [
  "E402", # Module-level import not at top of file
]
per-file-ignores."tests/*" = [
  "ANN201",  # Missing return type annotation for public function
  "D",       # Docstrings
  "INP001",  # Implicit namespace packages
  "PD011",   # Use of .values (false positives on non-pandas objects)
  "PLR2004", # Magic value in comparison (expected results in assertions)
]
per-file-ignores."tests/metadata/test_mapping_changed.py" = [
  "S108", # Hardcoded temporary file path
]
pydocstyle.convention = "google"
pylint.max-statements = 100

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.tasks",
  "tool.pixi.workspace",
]

[tool.ty]
# ty resolves third-party imports from this pixi env (the ty-pre-commit hook runs
# `uv check --no-project`, so uv neither creates a `.venv` nor resolves deps). Run
# `pixi install` once.
environment.python = ".pixi/envs/py314"
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.ineffective-final = "error"
rules.invalid-enum-member-annotation = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-legacy-positional-parameter = "error"
rules.possibly-missing-submodule = "error"
rules.redundant-cast = "error"
rules.unused-awaitable = "error"
rules.unused-ignore-comment = "error"

[tool.pytest]
ini_options.norecursedirs = [ "docs" ]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = []

[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"

[tool.pytask]
ini_options.editor_url_scheme = "vscode"
ini_options.paths = [ "./src/soep_preparation" ]
ini_options.pdbcls = "pdbp:Pdb"
ini_options.task_files = [ "task_*.py", "task.py", "tasks.py" ]
