[metadata]
name = data_management_von_gaudecker
description = Data management (Prof. von Gaudecker)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felixschmitz/data_management_von_gaudecker
author = Felix Schmitz
author_email = s87fschm@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/felixschmitz/data_management_von_gaudecker
    Documentation = https://github.com/felixschmitz/data_management_von_gaudecker
    Github = https://github.com/felixschmitz/data_management_von_gaudecker
    Tracker = https://github.com/felixschmitz/data_management_von_gaudecker/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/data_management_von_gaudecker/_version.py
